Fix About Me padding on mobile

--- a/styles2.css
+++ b/styles2.css
@@ -264,6 +264,7 @@ img{
 
     .about__items p{
         margin-top: 3rem;
+        padding-right: 20px;
     }
 }
 
